--- a/package.json
+++ b/package.json
@@ -4,12 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc",
+    "dev": "ts-node-dev --inspect --respawn --ignore-watch node_modules src/app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.168",
+    "@types/mongoose": "^5.10.3",
+    "@types/multer": "^1.4.5",
+    "@types/node": "^14.14.22",
+    "body-parser": "^1.19.0",
+    "convert-excel-to-json": "^1.7.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.3"
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.13",
+    "multer": "^1.4.2",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.3",
+    "xml2json": "^0.12.0"
   }
 }
