--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3",
     "xml2json": "^0.12.0"
+  },
+  "engines": {
+    "node": "14.8.x"
   }
 }
