--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./build/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc",
+    "build": "tsc",
     "dev": "ts-node-dev --inspect --respawn --ignore-watch node_modules src/app.ts",
     "start": "node ./build/app.js"
   },
