--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@types/mongoose": "^5.10.3",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.22",
+    "@typescript-eslint/parser": "^4.15.1",
     "body-parser": "^1.19.0",
     "convert-excel-to-json": "^1.7.0",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
