--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./build/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc",
     "dev": "ts-node-dev --inspect --respawn --ignore-watch node_modules src/app.ts",
     "start": "node ./build/app.js"
@@ -36,5 +36,8 @@
   },
   "engines": {
     "node": "14.8.x"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
