--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./build/app.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --runInBand --watchAll --verbose",
     "build": "tsc",
     "dev": "ts-node-dev --inspect --respawn --ignore-watch node_modules src/app.ts",
     "start": "node ./build/app.js"
@@ -38,6 +38,11 @@
     "node": "14.8.x"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "@babel/preset-typescript": "^7.12.16",
+    "@types/jest": "^26.0.20",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.1"
   }
 }
