--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "xml2json": "^0.12.0"
   },
   "engines": {
-    "node": "14.8.x"
+    "node": "14.x.x"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.12.16",
