--- a/package.json
+++ b/package.json
@@ -12,6 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.13"
+  },
+  "engines": {
+    "node": "14.x.x"
+  },
+  "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.168",
@@ -19,30 +29,16 @@
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.22",
     "@typescript-eslint/parser": "^4.15.1",
-    "body-parser": "^1.19.0",
-    "convert-excel-to-json": "^1.7.0",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.20",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.11.13",
-    "multer": "^1.4.2",
-    "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.3",
-    "xml2json": "^0.12.0"
-  },
-  "engines": {
-    "node": "14.x.x"
-  },
-  "devDependencies": {
     "@babel/preset-typescript": "^7.12.16",
     "@types/jest": "^26.0.20",
     "@types/supertest": "^2.0.10",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
     "jest": "^26.6.3",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.1"
+    "ts-jest": "^26.5.1",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.3"
   }
 }
